tests/e2e/not_allowed/private.error
Error: syntax error in story at line 1, column 1

1|    private = 1
      ^^^^^^^

E0030: `private` is reserved for future use
